# DataWizards

./: .editorconfig  .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  Proposal.ipynb  README.md  app.yaml  config.toml  explore_api.ipynb  graph_analysis.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy.yml
Brandon/: game_evaluation_test.py  get_found_users.py  player_crawler.py
CONTRIBUTING/: index.html
YeBan/: model_assessment.ipynb  model_eval_v2.ipynb
about/: index.html
anomaly_detection/: index.html
assets/: style.css
cache/: __init__.py  main.py
dashapp/: __init__.py  analytics.py  filters.py  graph.py  main.py
data-extraction/: __main__.py
docs/: about.md  anomaly_detection.md
docs/reference/: cache.md  dashapp.md  extraction.md  network.md
extraction/: __init__.py  api.py  main.py
network/: FindWaldo.ipynb  __init__.py  main.py
notebooks/: explore_cache.ipynb
reference/cache/: index.html
reference/dashapp/: index.html
reference/extraction/: index.html
reference/network/: index.html
search/: search_index.json
tests/network/: test_main.py
