[tool.poetry]
name = "big-chess-analysis"
version = "0.1.0"
description = "A big chess analysis using chess.com API."
authors = ["D'Onofrio, William <16698591+wdonofrio@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "big_chess_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
