[tool.poetry]
name = "big-chess-analysis"
version = "0.1.0"
description = "A big chess analysis using chess.com API."
authors = ["D'Onofrio, William <16698591+wdonofrio@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "extraction"},
    { include = "cache"},
    { include = "network"},
    { include = "dashapp"},
]
[tool.poetry.dependencies]
python = "^3.10"
chess-com = "^2.1.0"
toml = "^0.10.2"
pandas = "^2.2.2"
networkx = "^3.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pyvis = "^0.3.2"
dash = "^2.18.1"
plotly = "^5.24.1"
dash-bootstrap-components = "^1.6.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
isort = "^5.13.2"
black = "^24.8.0"
ruff = "^0.6.4"
pre-commit = "^3.8.0"
types-toml = "^0.10.8.20240310"
pytest = "^8.3.3"
mypy = "^1.11.2"
pandas-stubs = "^2.2.3.241009"
python-chess = "^1.999"

[tool.poetry.scripts]
dash-app = "dashapp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
